--- a/Jesus_New_Model.ipynb
+++ b/Jesus_New_Model.ipynb
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "53668444",
    "metadata": {},
    "outputs": [
@@ -1186,6 +1186,7 @@
     }
    ],
    "source": [
+    "################NEW#########################\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "smote = SMOTE(random_state=42)\n",
@@ -1200,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "1d186552",
    "metadata": {},
    "outputs": [
@@ -1214,6 +1215,7 @@
     }
    ],
    "source": [
+    "################NEW#########################\n",
     "model = LogisticRegression()\n",
     "model.fit(X_train_resampled,y_train_resampled)\n",
     "\n",
@@ -1233,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "a8dd5503",
    "metadata": {},
    "outputs": [
@@ -1255,6 +1257,7 @@
     }
    ],
    "source": [
+    "################NEW#########################\n",
     "# You can also print out classification reports for more detailed performance analysis\n",
     "print(\"Logistic Regression Classification Report:\\n\", classification_report(y_train_resampled, X_train_prediction))"
    ]
