added conn to sql server

--- a/Jesus_New_Model.ipynb
+++ b/Jesus_New_Model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0e915e70",
    "metadata": {
     "id": "0e915e70"
@@ -24,7 +24,51 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n"
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "import psycopg2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a963a57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connection parameters\n",
+    "user = \"c_mini\"\n",
+    "password = \"will_add_later\"\n",
+    "host = \"project4.postgres.database.azure.com\"\n",
+    "port = 5432\n",
+    "database = \"lapd_ml\"\n",
+    "\n",
+    "# SQL query to fetch data from the table\n",
+    "query = \"SELECT * FROM date_time;\"  # Replace with your table name\n",
+    "\n",
+    "try:\n",
+    "    # Connect to PostgreSQL\n",
+    "    conn = psycopg2.connect(\n",
+    "        user=user,\n",
+    "        password=password,\n",
+    "        host=host,\n",
+    "        port=port,\n",
+    "        database=database,\n",
+    "        sslmode='require'\n",
+    "    )\n",
+    "\n",
+    "    # Use pandas to execute the query and load the results into a DataFrame\n",
+    "    df = pd.read_sql(query, conn)\n",
+    "\n",
+    "    # Display the DataFrame\n",
+    "    print(df)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"Error while connecting to PostgreSQL:\", e)\n",
+    "\n",
+    "finally:\n",
+    "    # Close the connection\n",
+    "    if conn:\n",
+    "        conn.close()"
    ]
   },
   {
