--- a/Jesus_New_Model.ipynb
+++ b/Jesus_New_Model.ipynb
@@ -24,8 +24,7 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "import psycopg2\n"
+    "from sklearn.metrics import accuracy_score, classification_report\n"
    ]
   },
   {
