added gitignore and updated code

--- a/carl_sql.ipynb
+++ b/carl_sql.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sqlalchemy import create_engine, text"
+    "from db_config import DATABASE_CONFIG\n",
+    "from sqlalchemy import create_engine, text\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -18,51 +19,43 @@
    "source": [
     "############ Connecting to the Postgre server in Azure ############\n",
     "\n",
-    "# Connection parameters\n",
-    "user = \"c_mini\"\n",
-    "password = \"SalaMandar18@!\"\n",
-    "host = \"project4.postgres.database.azure.com\"\n",
-    "port = 5432\n",
-    "database = \"lapd_ml\"\n",
-    "\n",
-    "# SQL query to create a new table\n",
-    "create_table_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS crime_data_2020_to_present (\n",
-    "    DR_NO INT,\n",
-    "    Date_Rptd DATE NOT NULL,\n",
-    "    Date_Occ DATE NOT NULL,\n",
-    "    Time_Occ TIME NOT NULL,\n",
-    "    AREA INT,\n",
-    "    AREA_NAME VARCHAR(100),\n",
-    "    Rpt_Dist_No INT,\n",
-    "    Part_1_2 INT,\n",
-    "    Crm_Cd VARCHAR(5) PRIMARY KEY,\n",
-    "    Crm_Cd_Desc VARCHAR(100),\n",
-    "\tMocodes TEXT,\n",
-    "    VictAge INT,\n",
-    "    VictSex VARCHAR(1),\n",
-    "    Vict_Descent VARCHAR(1),\n",
-    "    Premis_Cd INT,\n",
-    "    Premis_Desc VARCHAR(75),\n",
-    "    Weapon_Use_Cd NUMERIC,\n",
-    "    Weapon_Desc VARCHAR(100),\n",
-    "    Status VARCHAR(100),\n",
-    "\tStatus_Desc VARCHAR(100),\n",
-    "    Crm_Cd_1 NUMERIC,\n",
-    "    Crm_Cd_2 NUMERIC,\n",
-    "    Crm_Cd_3 NUMERIC,\n",
-    "    Crm_Cd_4 NUMERIC,\n",
-    "    LOCATION VARCHAR(100),\n",
-    "    Cross_Street VARCHAR(100)\n",
-    ");\n",
-    "\"\"\"\n",
-    "\n",
     "try:\n",
-    "    # Create the SQLAlchemy engine\n",
-    "    connection_url = f\"postgresql://{user}:{password}@{host}:{port}/{database}\"\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
     "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
     "\n",
     "    # Execute the query to create the table\n",
+    "    create_table_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS crime_data_2020_to_present (\n",
+    "        DR_NO INT,\n",
+    "        Date_Rptd DATE NOT NULL,\n",
+    "        Date_Occ DATE NOT NULL,\n",
+    "        Time_Occ TIME NOT NULL,\n",
+    "        AREA INT,\n",
+    "        AREA_NAME VARCHAR(50),\n",
+    "        Rpt_Dist_No INT,\n",
+    "        Part_1_2 INT,\n",
+    "        Crm_Cd VARCHAR(5) PRIMARY KEY,\n",
+    "        Crm_Cd_Desc VARCHAR(75),\n",
+    "        VictAge INT,\n",
+    "        VictSex VARCHAR(1),\n",
+    "        Vict_Descent VARCHAR(1),\n",
+    "        Premis_Cd INT,\n",
+    "        Premis_Desc VARCHAR(75),\n",
+    "        Weapon_Use_Cd INT,\n",
+    "        Weapon_Desc VARCHAR(50),\n",
+    "        Status VARCHAR(50),\n",
+    "        Crm_Cd_1 INT,\n",
+    "        Crm_Cd_2 INT,\n",
+    "        Crm_Cd_3 INT,\n",
+    "        Crm_Cd_4 INT,\n",
+    "        LOCATION VARCHAR(50),\n",
+    "        Cross_Street VARCHAR(75),\n",
+    "        LAT DECIMAL(9,6),\n",
+    "        LON DECIMAL(9,6)\n",
+    "    );\n",
+    "    \"\"\"\n",
+    "\n",
     "    with engine.connect() as conn:\n",
     "        conn.execute(text(create_table_query))\n",
     "        print(\"Table created successfully.\")\n",
@@ -85,32 +78,30 @@
    "outputs": [],
    "source": [
     "####### updating the time_occ column to integer #######\n",
-    "# Connection parameters\n",
-    "user = \"c_mini\"\n",
-    "password = \"SalaMandar18@!\"\n",
-    "host = \"project4.postgres.database.azure.com\"\n",
-    "port = 5432\n",
-    "database = \"lapd_ml\"\n",
-    "\n",
-    "# SQL query to alter the column type\n",
-    "alter_column_query = \"\"\"\n",
-    "ALTER TABLE crime_data_2020_to_present\n",
-    "ALTER COLUMN time_occ TYPE INTEGER\n",
-    "USING EXTRACT(HOUR FROM time_occ)::INTEGER;\n",
-    "\"\"\"\n",
-    "\n",
     "try:\n",
-    "    # Create the SQLAlchemy engine\n",
-    "    connection_url = f\"postgresql://{user}:{password}@{host}:{port}/{database}\"\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
     "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
     "\n",
-    "    # Execute the query to alter the column\n",
+    "    # Execute the query to create the table\n",
+    "    alter_column_query = \"\"\"\n",
+    "    ALTER TABLE crime_data_2020_to_present\n",
+    "    ALTER COLUMN time_occ TYPE INTEGER\n",
+    "    USING EXTRACT(HOUR FROM time_occ)::INTEGER;\n",
+    "    \"\"\"\n",
+    "\n",
     "    with engine.connect() as conn:\n",
-    "        conn.execute(text(alter_column_query))\n",
-    "        print(\"Column type updated successfully.\")\n",
+    "        conn.execute(text(create_table_query))\n",
+    "        print(\"Table created successfully.\")\n",
+    "\n",
+    "    # Optionally, read data into a DataFrame\n",
+    "    query = \"SELECT * FROM crime_data_2020_to_present;\"  # Example query\n",
+    "    with engine.connect() as conn:\n",
+    "        date_time_df = pd.read_sql(query, conn)\n",
+    "        print(date_time_df)\n",
     "\n",
     "except Exception as e:\n",
-    "    print(\"Error while altering the column:\", e)\n"
+    "    print(\"Error while connecting to PostgreSQL:\", e)\n"
    ]
   },
   {
@@ -120,19 +111,20 @@
    "outputs": [],
    "source": [
     "# SQL query to create a new table\n",
-    "create_table_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS address\n",
-    "    area INT,\n",
-    "    area_name VARCHAR(75),\n",
-    "    address_id NUMERIC\n",
-    ");\n",
-    "\"\"\"\n",
     "try:\n",
-    "    # Create the SQLAlchemy engine\n",
-    "    connection_url = f\"postgresql://{user}:{password}@{host}:{port}/{database}\"\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
     "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
     "\n",
     "    # Execute the query to create the table\n",
+    "    create_table_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS address\n",
+    "        area INT,\n",
+    "        area_name VARCHAR(75),\n",
+    "        address_id NUMERIC\n",
+    "    );\n",
+    "    \"\"\"\n",
+    "\n",
     "    with engine.connect() as conn:\n",
     "        conn.execute(text(create_table_query))\n",
     "        print(\"Table created successfully.\")\n",
@@ -148,18 +140,19 @@
    "outputs": [],
    "source": [
     "# SQL query to create a new table\n",
-    "create_table_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS crime\n",
-    "    crm_cd INT,\n",
-    "    crm_cd_desc VARCHAR(100),\n",
-    ");\n",
-    "\"\"\"\n",
     "try:\n",
-    "    # Create the SQLAlchemy engine\n",
-    "    connection_url = f\"postgresql://{user}:{password}@{host}:{port}/{database}\"\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
     "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
     "\n",
     "    # Execute the query to create the table\n",
+    "    create_table_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS crime\n",
+    "        crm_cd INT,\n",
+    "        crm_cd_desc VARCHAR(100)\n",
+    "    );\n",
+    "    \"\"\"\n",
+    "    \n",
     "    with engine.connect() as conn:\n",
     "        conn.execute(text(create_table_query))\n",
     "        print(\"Table created successfully.\")\n",
@@ -175,23 +168,23 @@
    "outputs": [],
    "source": [
     "# SQL query to create a new table\n",
-    "create_table_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS crimedata\n",
-    "    DR_NO INT,\n",
-    "    Date_Rptd DATE NOT NULL,\n",
-    "    Date_Occ DATE NOT NULL,\n",
-    "    Time_Occ TIME NOT NULL,\n",
-    "    area INT,\n",
-    "    crm_cd INT,\n",
-    "    location VARCHAR(50)\n",
-    ");\n",
-    "\"\"\"\n",
     "try:\n",
-    "    # Create the SQLAlchemy engine\n",
-    "    connection_url = f\"postgresql://{user}:{password}@{host}:{port}/{database}\"\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
     "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
     "\n",
     "    # Execute the query to create the table\n",
+    "    create_table_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS crimedata\n",
+    "        DR_NO INT,\n",
+    "        Date_Rptd DATE NOT NULL,\n",
+    "        Date_Occ DATE NOT NULL,\n",
+    "        Time_Occ TIME NOT NULL,\n",
+    "        area INT,\n",
+    "        crm_cd INT,\n",
+    "        location VARCHAR(50)\n",
+    "    );\n",
+    "    \"\"\"\n",
     "    with engine.connect() as conn:\n",
     "        conn.execute(text(create_table_query))\n",
     "        print(\"Table created successfully.\")\n",
@@ -199,6 +192,13 @@
     "except Exception as e:\n",
     "    print(\"Error while connecting to PostgreSQL:\", e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
