trying to connect the db

--- a/carl_sql.ipynb
+++ b/carl_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,7 @@
     "        Crm_Cd_4 INT,\n",
     "        LOCATION VARCHAR(50),\n",
     "        Cross_Street VARCHAR(75),\n",
-    "        LAT DECIMAL(9,6),\n",
-    "        LON DECIMAL(9,6)\n",
+    "        address_id NUMERIC\n",
     "    );\n",
     "    \"\"\"\n",
     "\n",
@@ -198,7 +197,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SQL query to create a new table\n",
+    "try:\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
+    "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
+    "\n",
+    "    # Execute the query to create the table\n",
+    "    create_table_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS date_time\n",
+    "        DR_NO INT,\n",
+    "        Date_Rptd DATE NOT NULL,\n",
+    "        Date_Occ DATE NOT NULL,\n",
+    "        Time_Occ TIME NOT NULL,\n",
+    "        day_or_night VARCHAR(5),\n",
+    "        crm_cd VARCHAR(5),\n",
+    "        date_time_id NUMERIC\n",
+    "    );\n",
+    "    \"\"\"\n",
+    "    with engine.connect() as conn:\n",
+    "        conn.execute(text(create_table_query))\n",
+    "        print(\"Table created successfully.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"Error while connecting to PostgreSQL:\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "postgresql://c_mini:SalaMandar18@!project4.postgres.database.azure.com:5432/lapd_ml\n",
+      "Error while connecting to PostgreSQL: (psycopg2.OperationalError) could not translate host name \"!project4.postgres.database.azure.com\" to address: No such host is known. \n",
+      "\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
+    "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
+    "\n",
+    "    print(connection_url)\n",
+    "    # Optionally, read data into a DataFrame\n",
+    "    query = \"SELECT * FROM crime_data_2020_to_present;\"  # Example query\n",
+    "    with engine.connect() as conn:\n",
+    "        crime_data_2020_to_present_df = pd.read_sql(query, conn)\n",
+    "        print(date_time_df)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"Error while connecting to PostgreSQL:\", e)"
+   ]
   }
  ],
  "metadata": {
