final push (Carl)

--- a/Jesus_New_Model.ipynb
+++ b/Jesus_New_Model.ipynb
@@ -52,7 +52,22 @@
    "id": "927ff7b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
+    "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
+    "\n",
+    "    print(connection_url)\n",
+    "    # Optionally, read data into a DataFrame\n",
+    "    query = \"SELECT * FROM crime_data_2020_to_present;\"  # Example query\n",
+    "    with engine.connect() as conn:\n",
+    "        crime_data_2020_to_present_df = pd.read_sql(query, conn)\n",
+    "        print(crime_data_2020_to_present_df)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"Error while connecting to PostgreSQL:\", e)"
+   ]
   },
   {
    "cell_type": "code",
@@ -335,7 +350,7 @@
     }
    ],
    "source": [
-    "df[['Mocodes',\n",
+    "crime_data_2020_to_present_df[['Mocodes',\n",
     " 'Vict Sex',\n",
     " 'Vict Descent',\n",
     " 'Premis Cd',\n",
