--- a/carl_sql.ipynb
+++ b/carl_sql.ipynb
@@ -226,24 +226,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://c_mini:SalaMandar18@!project4.postgres.database.azure.com:5432/lapd_ml\n",
-      "Error while connecting to PostgreSQL: (psycopg2.OperationalError) could not translate host name \"!project4.postgres.database.azure.com\" to address: No such host is known. \n",
+      "postgresql://c_mini:SalaMandar18@project4.postgres.database.azure.com:5432/lapd_ml\n",
+      "            dr_no   date_rptd    date_occ  time_occ  area   area_name  \\\n",
+      "0       190326475  2020-03-01  2020-03-01      2130     7    Wilshire   \n",
+      "1       200106753  2020-02-09  2020-02-08      1800     1     Central   \n",
+      "2       200320258  2020-11-11  2020-11-04      1700     3   Southwest   \n",
+      "3       200907217  2023-05-10  2020-03-10      2037     9    Van Nuys   \n",
+      "4       220614831  2022-08-18  2020-08-17      1200     6   Hollywood   \n",
+      "...           ...         ...         ...       ...   ...         ...   \n",
+      "966946  242004546  2024-01-16  2024-01-16      1510    20     Olympic   \n",
+      "966947  240710284  2024-07-24  2024-07-23      1400     7    Wilshire   \n",
+      "966948  240104953  2024-01-15  2024-01-15       100     1     Central   \n",
+      "966949  241711348  2024-07-19  2024-07-19       757    17  Devonshire   \n",
+      "966950  240309674  2024-04-24  2024-04-24      1500     3   Southwest   \n",
       "\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+      "        rpt_dist_no  part_1_2 crm_cd  \\\n",
+      "0               784         1    510   \n",
+      "1               182         1    330   \n",
+      "2               356         1    480   \n",
+      "3               964         1    343   \n",
+      "4               666         2    354   \n",
+      "...             ...       ...    ...   \n",
+      "966946         2013         2    624   \n",
+      "966947          788         1    510   \n",
+      "966948          101         2    745   \n",
+      "966949         1751         2    888   \n",
+      "966950          358         1    230   \n",
+      "\n",
+      "                                           crm_cd_desc  ...  \\\n",
+      "0                                     VEHICLE - STOLEN  ...   \n",
+      "1                                BURGLARY FROM VEHICLE  ...   \n",
+      "2                                        BIKE - STOLEN  ...   \n",
+      "3             SHOPLIFTING-GRAND THEFT ($950.01 & OVER)  ...   \n",
+      "4                                    THEFT OF IDENTITY  ...   \n",
+      "...                                                ...  ...   \n",
+      "966946                        BATTERY - SIMPLE ASSAULT  ...   \n",
+      "966947                                VEHICLE - STOLEN  ...   \n",
+      "966948        VANDALISM - MISDEAMEANOR ($399 OR UNDER)  ...   \n",
+      "966949                                     TRESPASSING  ...   \n",
+      "966950  ASSAULT WITH DEADLY WEAPON, AGGRAVATED ASSAULT  ...   \n",
+      "\n",
+      "                                           weapon_desc  status   status_desc  \\\n",
+      "0                                                 None      AA  Adult Arrest   \n",
+      "1                                                 None      IC   Invest Cont   \n",
+      "2                                                 None      IC   Invest Cont   \n",
+      "3                                                 None      IC   Invest Cont   \n",
+      "4                                                 None      IC   Invest Cont   \n",
+      "...                                                ...     ...           ...   \n",
+      "966946  STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)      IC   Invest Cont   \n",
+      "966947                                            None      IC   Invest Cont   \n",
+      "966948                     UNKNOWN WEAPON/OTHER WEAPON      IC   Invest Cont   \n",
+      "966949                                            None      IC   Invest Cont   \n",
+      "966950                                           STICK      IC   Invest Cont   \n",
+      "\n",
+      "       crm_cd_1  crm_cd_2 crm_cd_3  crm_cd_4  \\\n",
+      "0         510.0     998.0      NaN       NaN   \n",
+      "1         330.0     998.0      NaN       NaN   \n",
+      "2         480.0       NaN      NaN       NaN   \n",
+      "3         343.0       NaN      NaN       NaN   \n",
+      "4         354.0       NaN      NaN       NaN   \n",
+      "...         ...       ...      ...       ...   \n",
+      "966946    624.0       NaN      NaN       NaN   \n",
+      "966947    510.0       NaN      NaN       NaN   \n",
+      "966948    745.0       NaN      NaN       NaN   \n",
+      "966949    888.0       NaN      NaN       NaN   \n",
+      "966950    230.0       NaN      NaN       NaN   \n",
+      "\n",
+      "                                        location  \\\n",
+      "0        1900 S  LONGWOOD                     AV   \n",
+      "1        1000 S  FLOWER                       ST   \n",
+      "2        1400 W  37TH                         ST   \n",
+      "3       14000    RIVERSIDE                    DR   \n",
+      "4                              1900    TRANSIENT   \n",
+      "...                                          ...   \n",
+      "966946           HOBART                       BL   \n",
+      "966947   4000 W  23RD                         ST   \n",
+      "966948   1300 W  SUNSET                       BL   \n",
+      "966949  10000    OLD DEPOT PLAZA              RD   \n",
+      "966950           FLOWER                       ST   \n",
+      "\n",
+      "                           cross_street address_id  \n",
+      "0                                  None          1  \n",
+      "1                                  None          2  \n",
+      "2                                  None          3  \n",
+      "3                                  None          4  \n",
+      "4                                  None          5  \n",
+      "...                                 ...        ...  \n",
+      "966946  3RD                          ST     966947  \n",
+      "966947                             None     966948  \n",
+      "966948                             None     966949  \n",
+      "966949                             None     966950  \n",
+      "966950  JEFFERSON                    BL     966951  \n",
+      "\n",
+      "[966951 rows x 27 columns]\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    # Create the SQLAlchemy engine using the DATABASE_CONFIG from db_config.py\n",
-    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
+    "    connection_url = f\"postgresql://{DATABASE_CONFIG['user']}:{DATABASE_CONFIG['password']}@{DATABASE_CONFIG['host']}:{DATABASE_CONFIG['port']}/{DATABASE_CONFIG['database']}\"\n",
     "    engine = create_engine(connection_url, connect_args={\"sslmode\": \"require\"})\n",
     "\n",
     "    print(connection_url)\n",
@@ -251,7 +340,7 @@
     "    query = \"SELECT * FROM crime_data_2020_to_present;\"  # Example query\n",
     "    with engine.connect() as conn:\n",
     "        crime_data_2020_to_present_df = pd.read_sql(query, conn)\n",
-    "        print(date_time_df)\n",
+    "        print(crime_data_2020_to_present_df)\n",
     "\n",
     "except Exception as e:\n",
     "    print(\"Error while connecting to PostgreSQL:\", e)"
